chore: Add crates.io metadata.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ resolver = "2"
 version = "0.1.0"
 license = "Apache-2.0"
 edition = "2024"
+repository = "https://github.com/linabutler/ploidy"
+keywords = ["openapi", "swagger"]
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
