--- a/ploidy-util/Cargo.toml
+++ b/ploidy-util/Cargo.toml
@@ -5,6 +5,8 @@ readme = "README.md"
 version.workspace = true
 license.workspace = true
 edition.workspace = true
+repository.workspace = true
+keywords.workspace = true
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
