--- a/ploidy/Cargo.toml
+++ b/ploidy/Cargo.toml
@@ -5,6 +5,8 @@ readme = "README.md"
 version.workspace = true
 license.workspace = true
 edition.workspace = true
+repository.workspace = true
+keywords.workspace = true
 
 [dependencies]
 clap = { version = "4", features = ["cargo", "derive"] }
