--- a/ploidy/Cargo.toml
+++ b/ploidy/Cargo.toml
@@ -16,6 +16,7 @@ indexmap = { version = "2", features = ["serde"] }
 indoc = "2"
 itertools = "0.14"
 miette = { version = "7", features = ["fancy"] }
+mimalloc = { version = "0.1", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", features = ["preserve_order"] }
 serde_path_to_error = "0.1"
@@ -48,3 +49,6 @@ winnow = "0.7"
 [lib]
 name = "ploidy"
 path = "src/lib.rs"
+
+[features]
+mimalloc = ["dep:mimalloc"]
