--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
           release_name: ${{ github.ref_name }}
           draft: true
           prerelease: false
+
   bins:
     name: Build and upload release binaries
     needs: [release]
@@ -147,3 +148,27 @@ jobs:
           asset_path: ./archive.zip
           asset_name: ${{ matrix.binary }}-${{ github.ref_name }}-${{ matrix.platform.target }}.zip
           asset_content_type: application/zip
+
+  publish:
+    name: Publish to crates.io
+    permissions:
+      id-token: write
+    runs-on: ubuntu-latest
+    env:
+      CARGO_TERM_COLOR: always
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v6
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Authenticate with crates.io
+        uses: rust-lang/crates-io-auth-action@v1
+        id: auth
+
+      - name: Publish all packages
+        shell: bash
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
+        run: |
+          cargo publish --workspace
