--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["ploidy", "ploidy-util"]
+members = ["ploidy", "ploidy-pointer", "ploidy-pointer-derive", "ploidy-util"]
 resolver = "2"
 
 [workspace.package]
@@ -8,6 +8,10 @@ license = "Apache-2.0"
 edition = "2024"
 repository = "https://github.com/linabutler/ploidy"
 keywords = ["openapi", "swagger"]
+
+[workspace.dependencies]
+ploidy-pointer = { path = "ploidy-pointer", version = "0.1.3" }
+ploidy-pointer-derive = { path = "ploidy-pointer-derive", version = "0.1.3" }
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
