chore: Enable `ploidy-pointer/full` for Ploidy.

--- a/ploidy-pointer/Cargo.toml
+++ b/ploidy-pointer/Cargo.toml
@@ -30,6 +30,7 @@ optional = true
 
 [features]
 default = ["derive"]
+full = ["chrono", "derive", "did-you-mean", "indexmap", "serde_json", "url"]
 chrono = ["dep:chrono"]
 derive = ["dep:ploidy-pointer-derive"]
 did-you-mean = ["dep:strsim", "ploidy-pointer-derive/did-you-mean"]
