--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,12 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
   workflow_dispatch:
+    inputs:
+      publish:
+        description: "Publish release to crates.io"
+        type: boolean
+        required: false
+        default: true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -158,6 +164,7 @@ jobs:
 
   publish:
     name: Publish to crates.io
+    if: ${{ github.event_name == 'push' || inputs.publish }}
     permissions:
       id-token: write
     runs-on: ubuntu-latest
