--- a/ploidy-pointer-derive/Cargo.toml
+++ b/ploidy-pointer-derive/Cargo.toml
@@ -2,11 +2,11 @@
 name = "ploidy-pointer-derive"
 description = "Derive macros for Ploidy JSON Pointers"
 readme = "README.md"
+keywords = ["6901", "json", "json-pointer", "rfc-6901"]
 version.workspace = true
 license.workspace = true
 edition.workspace = true
 repository.workspace = true
-keywords.workspace = true
 
 [lib]
 proc-macro = true
