--- a/ploidy-pointer-derive/Cargo.toml
+++ b/ploidy-pointer-derive/Cargo.toml
@@ -19,9 +19,6 @@ quote = "1"
 syn = "2"
 thiserror = "2"
 
-[dev-dependencies]
-ploidy-pointer = { workspace = true, features = [] }
-
 [features]
 default = []
-did-you-mean = ["ploidy-pointer/did-you-mean"]
+did-you-mean = []
