feat: Support more complex query param styles.

--- a/ploidy-util/Cargo.toml
+++ b/ploidy-util/Cargo.toml
@@ -10,5 +10,8 @@ keywords.workspace = true
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+itertools = "0.14"
+percent-encoding = "2.3"
 serde = { version = "1", features = ["derive"] }
 thiserror = "2"
+url = "2"
