feat: Support patterns in the Stripe OpenAPI spec.
This includes:

* Reworking the graph to contain inline types, so that we can
  emit boxed fields for circular references correctly.
  This also lets us significantly simplify the bookkeeping for
  traversal, since the graph is guaranteed to contain edges for
  all references.
* Emitting type aliases for unrepresentable enum variants
  (several of Stripe's enums include the empty string as a value).
* Supporting `anyOf`.

...And a handful of other refactors:

* Splitting out `IrGraph` from `IrSpec`.
* Caching and consolidating the type-to-operations mapping
  in `IrGraph`.

--- a/ploidy-core/Cargo.toml
+++ b/ploidy-core/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 keywords.workspace = true
 
 [dependencies]
+by_address = "1"
 cargo_toml = { version = "0.22", optional = true }
 heck = "0.5"
 indexmap = { version = "2", features = ["serde"] }
