--- a/ploidy-core/Cargo.toml
+++ b/ploidy-core/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 keywords.workspace = true
 
 [dependencies]
+atomic_refcell = "0.1"
 by_address = "1"
 cargo_toml = { version = "0.22", optional = true }
 heck = "0.5"
@@ -25,6 +26,8 @@ ploidy-pointer = { workspace = true, features = ["full"] }
 prettyplease = { version = "0.2", optional = true }
 proc-macro2 = { version = "1", default-features = false, optional = true }
 quote = { version = "1", default-features = false, optional = true }
+ref-cast = "1"
+rustc-hash = "2"
 syn = { version = "2", default-features = false, features = [
     "parsing",
     "printing",
