chore(README): Wordsmithing; add `cargo binstall` instructions.

--- a/ploidy/Cargo.toml
+++ b/ploidy/Cargo.toml
@@ -18,3 +18,12 @@ semver = "1"
 
 [features]
 mimalloc = ["dep:mimalloc"]
+
+[package.metadata.binstall]
+pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
+bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
+pkg-fmt = "tgz"
+
+[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
+pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
+pkg-fmt = "zip"
