--- a/ploidy-core/Cargo.toml
+++ b/ploidy-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ploidy-core"
-description = "OpenAPI type definitions and code generators for Ploidy"
+description = "An OpenAPI IR and type graph for Ploidy"
 readme = "README.md"
 version.workspace = true
 license.workspace = true
@@ -12,7 +12,6 @@ keywords.workspace = true
 atomic_refcell = "0.1"
 by_address = "1"
 cargo_toml = { version = "0.22", optional = true }
-heck = "0.5"
 indexmap = { version = "2", features = ["serde"] }
 itertools = "0.14"
 miette = "7"
@@ -28,22 +27,10 @@ proc-macro2 = { version = "1", default-features = false, optional = true }
 quote = { version = "1", default-features = false, optional = true }
 ref-cast = "1"
 rustc-hash = "2"
-syn = { version = "2", default-features = false, features = [
-    "parsing",
-    "printing",
-], optional = true }
-textwrap = { version = "0.16", default-features = false, features = [
-    "unicode-linebreak",
-    "unicode-width",
-], optional = true }
+syn = { version = "2", default-features = false, optional = true }
 thiserror = "2"
-toml = { version = "0.9", default-features = false, features = [
-    "display",
-    "parse",
-    "serde",
-], optional = true }
+toml = { version = "0.9", default-features = false, optional = true }
 unicase = "2"
-unicode-ident = { version = "1", optional = true }
 winnow = "0.7"
 
 [dev-dependencies]
@@ -51,15 +38,12 @@ indoc = "2"
 
 [features]
 default = []
-rust = [
-    "cargo_toml",
-    "prettyplease",
-    "proc-macro2",
-    "quote",
-    "syn",
-    "textwrap",
-    "toml",
-    "unicode-ident",
+cargo_toml = ["dep:cargo_toml", "toml/display", "toml/serde"]
+proc-macro2 = [
+    "dep:prettyplease",
+    "dep:proc-macro2",
+    "dep:quote",
+    "syn/parsing",
 ]
 
 [lints]
