--- a/ploidy-pointer-derive/Cargo.toml
+++ b/ploidy-pointer-derive/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 license.workspace = true
 edition.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 [lib]
 proc-macro = true
