--- a/ploidy-pointer/Cargo.toml
+++ b/ploidy-pointer/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 license.workspace = true
 edition.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 indexmap = { version = "2", optional = true }
