--- a/ploidy/Cargo.toml
+++ b/ploidy/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 edition.workspace = true
 repository.workspace = true
 keywords.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 cargo_toml = "0.22"
