--- a/ploidy-core/Cargo.toml
+++ b/ploidy-core/Cargo.toml
@@ -13,6 +13,7 @@ rust-version.workspace = true
 atomic_refcell = "0.1"
 by_address = "1"
 cargo_toml = { version = "0.22", optional = true }
+either = "1"
 indexmap = { version = "2", features = ["serde"] }
 itertools = "0.14"
 miette = "7"
