--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ keywords = ["codegen", "openapi", "swagger"]
 rust-version = "1.89"
 
 [workspace.dependencies]
+either = "1"
 ploidy-codegen-rust = { path = "ploidy-codegen-rust", version = "0.5.0" }
 ploidy-core = { path = "ploidy-core", version = "0.5.0" }
 ploidy-pointer = { path = "ploidy-pointer", version = "0.5.0" }
