--- a/ploidy-codegen-rust/Cargo.toml
+++ b/ploidy-codegen-rust/Cargo.toml
@@ -11,7 +11,7 @@ rust-version.workspace = true
 
 [dependencies]
 cargo_toml = "0.22"
-either = "1"
+either = { workspace = true }
 heck = "0.5"
 itertools = "0.14"
 serde = { version = "1", features = ["derive"] }
@@ -20,6 +20,7 @@ ploidy-core = { workspace = true, features = ["cargo_toml", "proc-macro2"] }
 prettyplease = "0.2"
 proc-macro2 = { version = "1", default-features = false }
 quote = { version = "1", default-features = false }
+ref-cast = { workspace = true }
 syn = { version = "2", default-features = false, features = [
     "parsing",
     "printing",
