--- a/ploidy/Cargo.toml
+++ b/ploidy/Cargo.toml
@@ -12,6 +12,7 @@ rust-version.workspace = true
 [dependencies]
 cargo_toml = "0.22"
 clap = { version = "4", features = ["cargo", "derive"] }
+itertools = "0.14"
 miette = { version = "7", features = ["fancy"] }
 mimalloc = { version = "0.1", optional = true }
 ploidy-codegen-rust = { workspace = true }
