--- a/ploidy-util/Cargo.toml
+++ b/ploidy-util/Cargo.toml
@@ -11,12 +11,15 @@ keywords.workspace = true
 
 [dependencies]
 base64 = "0.22"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+http = "1"
 itertools = "0.14"
 percent-encoding = "2.3"
+reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "multipart", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
-thiserror = "2"
-url = "2"
-
-[dev-dependencies]
+serde_bytes = "0.11"
 serde_json = "1"
+serde_path_to_error = "0.1"
+thiserror = "2"
+url = { version = "2", features = ["serde"] }
+uuid = { version = "1", features = ["serde", "v4"] }
