--- a/ploidy-core/Cargo.toml
+++ b/ploidy-core/Cargo.toml
@@ -15,6 +15,7 @@ bumpalo = { version = "3", features = ["collections"] }
 by_address = "1"
 cargo_toml = { version = "0.22", optional = true }
 either = { workspace = true }
+enum-map = "2"
 fixedbitset = "0.5"
 indexmap = { version = "2", features = ["serde"] }
 itertools = "0.14"
