--- a/ploidy/Cargo.toml
+++ b/ploidy/Cargo.toml
@@ -16,6 +16,7 @@ itertools = "0.14"
 miette = { version = "7", features = ["fancy"] }
 mimalloc = { version = "0.1", optional = true }
 ploidy-codegen-rust = { workspace = true }
+ploidy-codegen-typescript = { workspace = true }
 ploidy-core = { workspace = true }
 semver = "1"
 
