--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ rust-version = "1.89"
 
 [workspace.dependencies]
 either = "1"
+oxc_allocator = "0.113"
+oxc_ast = "0.113"
+oxc_codegen = "0.113"
+oxc_span = "0.113"
 indoc = "2"
 ploidy-codegen-rust = { path = "ploidy-codegen-rust", version = "0.9.0" }
 ploidy-codegen-typescript = { path = "ploidy-codegen-typescript", version = "0.9.0" }
